ColRusParser.py
# Generated from ColRus.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ColRusParser ( Parser ):

    grammarFileName = "ColRus.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'muestre'", "'definir'", "'para'", "'desde'", 
                     "'hasta'", "'repetir'", "'si'", "'sino'", "'mientras'", 
                     "'kmeans'", "'retorne'", "'^'", "'('", "')'", "'['", 
                     "']'", "'{'", "'}'", "','", "';'", "'.'", "'='", "'-'", 
                     "'+'", "'*'", "'/'", "'%'", "'!'", "'<'", "'>'", "'<='", 
                     "'>='", "'=='", "'!='", "'crear_mlp'", "'entrenar_mlp'", 
                     "'predecir_mlp'", "'graficar'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "LPAREN", "RPAREN", "LBRACK", "RBRACK", 
                      "LBRACE", "RBRACE", "COMMA", "SEMI", "DOT", "EQUALS", 
                      "SUB", "ADD", "MUL", "DIV", "MOD", "BANG", "LT", "GT", 
                      "LE", "GE", "EQ", "NE", "CREAR_MLP", "ENTRENAR_MLP", 
                      "PREDECIR_MLP", "GRAFANA", "INT", "FLOAT", "STRING", 
                      "ID", "WS", "COMMENT" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_expressionStmt = 2
    RULE_printStmt = 3
    RULE_defStmt = 4
    RULE_forStmt = 5
    RULE_repeatStmt = 6
    RULE_ifStmt = 7
    RULE_whileStmt = 8
    RULE_mlpStmt = 9
    RULE_kmeansStmt = 10
    RULE_functionCallStmt = 11
    RULE_returnStmt = 12
    RULE_block = 13
    RULE_params = 14
    RULE_expression = 15
    RULE_relationalExpr = 16
    RULE_additiveExpr = 17
    RULE_multiplicativeExpr = 18
    RULE_powerExpr = 19
    RULE_unaryExpr = 20
    RULE_primaryExpr = 21
    RULE_atom = 22
    RULE_memberAccess = 23
    RULE_functionCall = 24
    RULE_args = 25
    RULE_matrixExpr = 26
    RULE_matrix = 27
    RULE_row = 28
    RULE_graficarStmt = 29

    ruleNames =  [ "program", "statement", "expressionStmt", "printStmt", 
                   "defStmt", "forStmt", "repeatStmt", "ifStmt", "whileStmt", 
                   "mlpStmt", "kmeansStmt", "functionCallStmt", "returnStmt", 
                   "block", "params", "expression", "relationalExpr", "additiveExpr", 
                   "multiplicativeExpr", "powerExpr", "unaryExpr", "primaryExpr", 
                   "atom", "memberAccess", "functionCall", "args", "matrixExpr", 
                   "matrix", "row", "graficarStmt" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    LPAREN=13
    RPAREN=14
    LBRACK=15
    RBRACK=16
    LBRACE=17
    RBRACE=18
    COMMA=19
    SEMI=20
    DOT=21
    EQUALS=22
    SUB=23
    ADD=24
    MUL=25
    DIV=26
    MOD=27
    BANG=28
    LT=29
    GT=30
    LE=31
    GE=32
    EQ=33
    NE=34
    CREAR_MLP=35
    ENTRENAR_MLP=36
    PREDECIR_MLP=37
    GRAFANA=38
    INT=39
    FLOAT=40
    STRING=41
    ID=42
    WS=43
    COMMENT=44

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(ColRusParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ColRusParser.StatementContext)
            else:
                return self.getTypedRuleContext(ColRusParser.StatementContext,i)


        def getRuleIndex(self):
            return ColRusParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = ColRusParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 4672924420814) != 0):
                self.state = 60
                self.statement()
                self.state = 65
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 66
            self.match(ColRusParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expressionStmt(self):
            return self.getTypedRuleContext(ColRusParser.ExpressionStmtContext,0)


        def printStmt(self):
            return self.getTypedRuleContext(ColRusParser.PrintStmtContext,0)


        def defStmt(self):
            return self.getTypedRuleContext(ColRusParser.DefStmtContext,0)


        def forStmt(self):
            return self.getTypedRuleContext(ColRusParser.ForStmtContext,0)


        def repeatStmt(self):
            return self.getTypedRuleContext(ColRusParser.RepeatStmtContext,0)


        def ifStmt(self):
            return self.getTypedRuleContext(ColRusParser.IfStmtContext,0)


        def whileStmt(self):
            return self.getTypedRuleContext(ColRusParser.WhileStmtContext,0)


        def mlpStmt(self):
            return self.getTypedRuleContext(ColRusParser.MlpStmtContext,0)


        def kmeansStmt(self):
            return self.getTypedRuleContext(ColRusParser.KmeansStmtContext,0)


        def functionCallStmt(self):
            return self.getTypedRuleContext(ColRusParser.FunctionCallStmtContext,0)


        def returnStmt(self):
            return self.getTypedRuleContext(ColRusParser.ReturnStmtContext,0)


        def graficarStmt(self):
            return self.getTypedRuleContext(ColRusParser.GraficarStmtContext,0)


        def getRuleIndex(self):
            return ColRusParser.RULE_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = ColRusParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 80
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 68
                self.expressionStmt()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 69
                self.printStmt()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 70
                self.defStmt()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 71
                self.forStmt()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 72
                self.repeatStmt()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 73
                self.ifStmt()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 74
                self.whileStmt()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 75
                self.mlpStmt()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 76
                self.kmeansStmt()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 77
                self.functionCallStmt()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 78
                self.returnStmt()
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 79
                self.graficarStmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ColRusParser.ID, 0)

        def EQUALS(self):
            return self.getToken(ColRusParser.EQUALS, 0)

        def SEMI(self):
            return self.getToken(ColRusParser.SEMI, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ColRusParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(ColRusParser.ExpressionContext,i)


        def functionCall(self):
            return self.getTypedRuleContext(ColRusParser.FunctionCallContext,0)


        def LBRACK(self):
            return self.getToken(ColRusParser.LBRACK, 0)

        def RBRACK(self):
            return self.getToken(ColRusParser.RBRACK, 0)

        def getRuleIndex(self):
            return ColRusParser.RULE_expressionStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpressionStmt" ):
                return visitor.visitExpressionStmt(self)
            else:
                return visitor.visitChildren(self)




    def expressionStmt(self):

        localctx = ColRusParser.ExpressionStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_expressionStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.match(ColRusParser.ID)
            self.state = 87
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==15:
                self.state = 83
                self.match(ColRusParser.LBRACK)
                self.state = 84
                self.expression()
                self.state = 85
                self.match(ColRusParser.RBRACK)


            self.state = 89
            self.match(ColRusParser.EQUALS)
            self.state = 92
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 90
                self.expression()
                pass

            elif la_ == 2:
                self.state = 91
                self.functionCall()
                pass


            self.state = 94
            self.match(ColRusParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ColRusParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(ColRusParser.ExpressionContext,i)


        def SEMI(self):
            return self.getToken(ColRusParser.SEMI, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(ColRusParser.COMMA)
            else:
                return self.getToken(ColRusParser.COMMA, i)

        def getRuleIndex(self):
            return ColRusParser.RULE_printStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrintStmt" ):
                return visitor.visitPrintStmt(self)
            else:
                return visitor.visitChildren(self)




    def printStmt(self):

        localctx = ColRusParser.PrintStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_printStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.match(ColRusParser.T__0)
            self.state = 97
            self.expression()
            self.state = 102
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==19:
                self.state = 98
                self.match(ColRusParser.COMMA)
                self.state = 99
                self.expression()
                self.state = 104
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 105
            self.match(ColRusParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DefStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ColRusParser.ID, 0)

        def LPAREN(self):
            return self.getToken(ColRusParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(ColRusParser.RPAREN, 0)

        def block(self):
            return self.getTypedRuleContext(ColRusParser.BlockContext,0)


        def params(self):
            return self.getTypedRuleContext(ColRusParser.ParamsContext,0)


        def getRuleIndex(self):
            return ColRusParser.RULE_defStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDefStmt" ):
                return visitor.visitDefStmt(self)
            else:
                return visitor.visitChildren(self)




    def defStmt(self):

        localctx = ColRusParser.DefStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_defStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.match(ColRusParser.T__1)
            self.state = 108
            self.match(ColRusParser.ID)
            self.state = 109
            self.match(ColRusParser.LPAREN)
            self.state = 111
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==42:
                self.state = 110
                self.params()


            self.state = 113
            self.match(ColRusParser.RPAREN)
            self.state = 114
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ColRusParser.ID, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ColRusParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(ColRusParser.ExpressionContext,i)


        def block(self):
            return self.getTypedRuleContext(ColRusParser.BlockContext,0)


        def getRuleIndex(self):
            return ColRusParser.RULE_forStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForStmt" ):
                return visitor.visitForStmt(self)
            else:
                return visitor.visitChildren(self)




    def forStmt(self):

        localctx = ColRusParser.ForStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_forStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.match(ColRusParser.T__2)
            self.state = 117
            self.match(ColRusParser.ID)
            self.state = 118
            self.match(ColRusParser.T__3)
            self.state = 119
            self.expression()
            self.state = 120
            self.match(ColRusParser.T__4)
            self.state = 121
            self.expression()
            self.state = 122
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RepeatStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ColRusParser.ID, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ColRusParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(ColRusParser.ExpressionContext,i)


        def block(self):
            return self.getTypedRuleContext(ColRusParser.BlockContext,0)


        def getRuleIndex(self):
            return ColRusParser.RULE_repeatStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRepeatStmt" ):
                return visitor.visitRepeatStmt(self)
            else:
                return visitor.visitChildren(self)




    def repeatStmt(self):

        localctx = ColRusParser.RepeatStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_repeatStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.match(ColRusParser.T__5)
            self.state = 125
            self.match(ColRusParser.ID)
            self.state = 126
            self.match(ColRusParser.T__3)
            self.state = 127
            self.expression()
            self.state = 128
            self.match(ColRusParser.T__4)
            self.state = 129
            self.expression()
            self.state = 130
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(ColRusParser.ExpressionContext,0)


        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ColRusParser.BlockContext)
            else:
                return self.getTypedRuleContext(ColRusParser.BlockContext,i)


        def getRuleIndex(self):
            return ColRusParser.RULE_ifStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStmt" ):
                return visitor.visitIfStmt(self)
            else:
                return visitor.visitChildren(self)




    def ifStmt(self):

        localctx = ColRusParser.IfStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_ifStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.match(ColRusParser.T__6)
            self.state = 133
            self.expression()
            self.state = 134
            self.block()
            self.state = 137
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==8:
                self.state = 135
                self.match(ColRusParser.T__7)
                self.state = 136
                self.block()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(ColRusParser.ExpressionContext,0)


        def block(self):
            return self.getTypedRuleContext(ColRusParser.BlockContext,0)


        def getRuleIndex(self):
            return ColRusParser.RULE_whileStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileStmt" ):
                return visitor.visitWhileStmt(self)
            else:
                return visitor.visitChildren(self)




    def whileStmt(self):

        localctx = ColRusParser.WhileStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_whileStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.match(ColRusParser.T__8)
            self.state = 140
            self.expression()
            self.state = 141
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MlpStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(ColRusParser.ID)
            else:
                return self.getToken(ColRusParser.ID, i)

        def CREAR_MLP(self):
            return self.getToken(ColRusParser.CREAR_MLP, 0)

        def LPAREN(self):
            return self.getToken(ColRusParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(ColRusParser.RPAREN, 0)

        def SEMI(self):
            return self.getToken(ColRusParser.SEMI, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ColRusParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(ColRusParser.ExpressionContext,i)


        def ENTRENAR_MLP(self):
            return self.getToken(ColRusParser.ENTRENAR_MLP, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(ColRusParser.COMMA)
            else:
                return self.getToken(ColRusParser.COMMA, i)

        def EQUALS(self):
            return self.getToken(ColRusParser.EQUALS, 0)

        def PREDECIR_MLP(self):
            return self.getToken(ColRusParser.PREDECIR_MLP, 0)

        def getRuleIndex(self):
            return ColRusParser.RULE_mlpStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMlpStmt" ):
                return visitor.visitMlpStmt(self)
            else:
                return visitor.visitChildren(self)




    def mlpStmt(self):

        localctx = ColRusParser.MlpStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_mlpStmt)
        self._la = 0 # Token type
        try:
            self.state = 180
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 143
                self.match(ColRusParser.ID)
                self.state = 144
                self.match(ColRusParser.CREAR_MLP)
                self.state = 145
                self.match(ColRusParser.LPAREN)
                self.state = 147
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 8246614073344) != 0):
                    self.state = 146
                    self.expression()


                self.state = 149
                self.match(ColRusParser.RPAREN)
                self.state = 150
                self.match(ColRusParser.SEMI)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 151
                self.match(ColRusParser.ID)
                self.state = 152
                self.match(ColRusParser.ENTRENAR_MLP)
                self.state = 153
                self.match(ColRusParser.LPAREN)
                self.state = 154
                self.expression()
                self.state = 155
                self.match(ColRusParser.COMMA)
                self.state = 156
                self.expression()
                self.state = 157
                self.match(ColRusParser.COMMA)
                self.state = 158
                self.expression()
                self.state = 159
                self.match(ColRusParser.COMMA)
                self.state = 160
                self.expression()
                self.state = 161
                self.match(ColRusParser.RPAREN)
                self.state = 162
                self.match(ColRusParser.SEMI)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 164
                self.match(ColRusParser.ID)
                self.state = 165
                self.match(ColRusParser.EQUALS)
                self.state = 166
                self.match(ColRusParser.ID)
                self.state = 167
                self.match(ColRusParser.PREDECIR_MLP)
                self.state = 168
                self.match(ColRusParser.LPAREN)
                self.state = 169
                self.expression()
                self.state = 170
                self.match(ColRusParser.RPAREN)
                self.state = 171
                self.match(ColRusParser.SEMI)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 173
                self.match(ColRusParser.ID)
                self.state = 174
                self.match(ColRusParser.PREDECIR_MLP)
                self.state = 175
                self.match(ColRusParser.LPAREN)
                self.state = 176
                self.expression()
                self.state = 177
                self.match(ColRusParser.RPAREN)
                self.state = 178
                self.match(ColRusParser.SEMI)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class KmeansStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ColRusParser.ID, 0)

        def EQUALS(self):
            return self.getToken(ColRusParser.EQUALS, 0)

        def LPAREN(self):
            return self.getToken(ColRusParser.LPAREN, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ColRusParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(ColRusParser.ExpressionContext,i)


        def COMMA(self):
            return self.getToken(ColRusParser.COMMA, 0)

        def RPAREN(self):
            return self.getToken(ColRusParser.RPAREN, 0)

        def SEMI(self):
            return self.getToken(ColRusParser.SEMI, 0)

        def getRuleIndex(self):
            return ColRusParser.RULE_kmeansStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitKmeansStmt" ):
                return visitor.visitKmeansStmt(self)
            else:
                return visitor.visitChildren(self)




    def kmeansStmt(self):

        localctx = ColRusParser.KmeansStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_kmeansStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 182
            self.match(ColRusParser.ID)
            self.state = 183
            self.match(ColRusParser.EQUALS)
            self.state = 184
            self.match(ColRusParser.T__9)
            self.state = 185
            self.match(ColRusParser.LPAREN)
            self.state = 186
            self.expression()
            self.state = 187
            self.match(ColRusParser.COMMA)
            self.state = 188
            self.expression()
            self.state = 189
            self.match(ColRusParser.RPAREN)
            self.state = 190
            self.match(ColRusParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionCallStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def functionCall(self):
            return self.getTypedRuleContext(ColRusParser.FunctionCallContext,0)


        def SEMI(self):
            return self.getToken(ColRusParser.SEMI, 0)

        def getRuleIndex(self):
            return ColRusParser.RULE_functionCallStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionCallStmt" ):
                return visitor.visitFunctionCallStmt(self)
            else:
                return visitor.visitChildren(self)




    def functionCallStmt(self):

        localctx = ColRusParser.FunctionCallStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_functionCallStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 192
            self.functionCall()
            self.state = 193
            self.match(ColRusParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(ColRusParser.ExpressionContext,0)


        def SEMI(self):
            return self.getToken(ColRusParser.SEMI, 0)

        def getRuleIndex(self):
            return ColRusParser.RULE_returnStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturnStmt" ):
                return visitor.visitReturnStmt(self)
            else:
                return visitor.visitChildren(self)




    def returnStmt(self):

        localctx = ColRusParser.ReturnStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_returnStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 195
            self.match(ColRusParser.T__10)
            self.state = 196
            self.expression()
            self.state = 197
            self.match(ColRusParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(ColRusParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(ColRusParser.RBRACE, 0)
